[package]
name = "netstat-cat"
version = "0.0.8"
description = "A network monitoring tool"
authors = ["xueshi.me"]
edition = "2021"

[lib]
name = "netstat_cat"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
netstat2 = "0.11"
sysinfo = "0.33"
